RESOLVED FIXED171932
DumpRenderTree crashed in com.apple.WebCore: std::optional<WTF::MediaTime>::operator-> + 71 :: CRASHING TEST: fullscreen/video-controls-timeline.html : Assertion failed: (initialized()), function operator->, file Optional.h
https://bugs.webkit.org/show_bug.cgi?id=171932
Summary DumpRenderTree crashed in com.apple.WebCore: std::optional<WTF::MediaTime>::o...
Matt Rajca
Reported 2017-05-10 10:49:03 PDT
DumpRenderTree crashed in com.apple.WebCore: std::optional<WTF::MediaTime>::operator-> + 71 :: CRASHING TEST: fullscreen/video-controls-timeline.html : Assertion failed: (initialized()), function operator->, file Optional.h, line N.
Attachments
Patch (1.44 KB, patch)
2017-05-10 10:54 PDT, Matt Rajca
eric.carlson: review+
Matt Rajca
Comment 1 2017-05-10 10:54:00 PDT
Matt Rajca
Comment 2 2017-05-10 10:54:28 PDT
Matt Rajca
Comment 3 2017-05-10 11:15:46 PDT
(This was introduced in r168852).
Matt Rajca
Comment 4 2017-05-10 12:25:27 PDT
Alexey Proskuryakov
Comment 5 2017-05-10 12:57:56 PDT
I wonder what the observable effect in release was!
Note You need to log in before you can comment on or make changes to this bug.