DumpRenderTree crashed in com.apple.WebCore: std::optional<WTF::MediaTime>::operator-> + 71 :: CRASHING TEST: fullscreen/video-controls-timeline.html https://bugs.webkit.org/show_bug.cgi?id=171932

Reviewed by Eric Carlson.

Explicitly initialize m_playbackWithoutUserGesture to "None".

* html/HTMLMediaElement.h:

Canonical link: https://commits.webkit.org/188848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216603 268f45cc-cd09-0410-ab3c-d52691b4dbfc